<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_textView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/main_text"
                tools:text="@string/main_text" />

            <AutoCompleteTextView
                android:id="@+id/name_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />

            <AutoCompleteTextView
                android:id="@+id/surname_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Surname" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insertButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="insertButtononClick"
                    android:text="@string/insert"
                    tools:text="@string/insert" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="deleteButtononClick"
                    android:text="@string/delete"
                    tools:text="@string/delete" />

                <Button
                    android:id="@+id/viewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="viewButtononClick"
                    android:text="@string/view"
                    tools:text="@string/view" />

                <Button
                    android:id="@+id/showButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showButtononClick"
                    android:text="@string/show"
                    tools:text="@string/show" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="backButtononClick"
                        android:text="@string/back"
                        tools:text="@string/back" />

                    <Button
                        android:id="@+id/update_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="updateButtononClick"
                        android:text="@string/update"
                        tools:text="@string/update" />
                </TableRow>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="572dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>